--- a/rockPaperStyle.css
+++ b/rockPaperStyle.css
@@ -4,22 +4,22 @@
   box-sizing: border-box;
 }
 body {
-  background: #132334;
+  background: #ffffff;
 }
 header {
-  background: #d3435e;
+  background: #1aadda;
   padding: 25px;
 }
 header > h1 {
-  color: #0d1824;
+  color: rgb(100, 100, 100);
   text-align: center;
   /* font-family: ; */
 }
 .scoreboard {
-  border: 3px solid whitesmoke;
+  border: 3px solid rgb(150, 150, 150);
   margin: 20px auto;
   width: 200px;
-  color: whitesmoke;
+  color: rgb(39, 39, 39);
   font-size: 46px;
   border-radius: 4px;
   text-align: center;
@@ -28,7 +28,7 @@ header > h1 {
 }
 
 .badge {
-  background: #d3435e;
+  background: #1aadda;
   font-size: 14px;
   padding: 2px 10px;
   border-radius: 3px;
@@ -47,7 +47,7 @@ header > h1 {
 
 .result {
   font-size: 40px;
-  color: whitesmoke;
+  color: rgb(39, 39, 39);
 }
 .result > p {
   text-align: center;
@@ -63,7 +63,7 @@ header > h1 {
   text-align: center;
 }
 .choice {
-  border: 2.75px solid whitesmoke;
+  border: 2.75px solid rgb(80, 80, 80);
   display: inline-block;
   border-radius: 50%;
   padding: 10px;
@@ -72,12 +72,12 @@ header > h1 {
 }
 .choice:hover {
   cursor: pointer;
-  background: #d3435e;
+  background: #1aadda;
 }
 
 #action-message {
   text-align: center;
-  color: whitesmoke;
+  color: rgb(39, 39, 39);
   font-weight: bold;
   font-size: 20px;
   margin-top: 10px;
